# pyfast

./: .gitignore  Makefile  README.md  pyproject.toml
src/builtin/: global.py  sys.py
src/builtin/syscalls/: macos.py
src/compiler/: compiler.py  ir.py  visitor.py
src/libpy/: str.py
src/parser/: driver.py  visitor.py
src/parser/ast/: __init__.py  ast.py  base.py  expressions.py  program.py  statements.py  targets.py  tree.py
src/parser/grammar/: PythonLexer.g4  PythonLexer.py  PythonLexerBase.py  PythonParser.g4  PythonParser.interp  PythonParser.py  PythonParserBase.py  PythonParserVisitor.py
src/pyfast/: build.py  command.py  main.py  run.py
tests/: test_language_goldens.py
tests/testdata/language/: additive_ops.py  additive_ops.py.golden  binary_mask_ops.py  binary_mask_ops.py.golden  comparison.py  comparison.py.golden  empty.py.golden  if.py  if.py.golden  multiplicative_ops.py  multiplicative_ops.py.golden  shift_ops.py  shift_ops.py.golden  unary_ops.py  unary_ops.py.golden  while.py  while.py.golden
